# Thor-ROS

./: .gitignore  README.md  package-lock.json  package.json  start.sh  ubuntu-instructions.md  windows-instructions.md
.devcontainer/: Dockerfile  devcontainer.json
asgard/: index.html  package-lock.json  package.json
asgard/public/: thor.urdf
asgard/public/thor_urdf/meshes/: Art3.dae  Art4.dae  Art5.dae  Art6.dae  GripperArm.dae  GripperArmGear.dae  GripperBase.dae  GripperFinger.dae
asgard/src/: App.css  App.jsx  IsMovingContext.jsx  RosContext.jsx  main.jsx
asgard/src/components/: FKControls.jsx  GizmoPage.jsx  IKControls.jsx  IKViewer.jsx  IkSliders.jsx  InverseKinematicsControls.jsx  JointSliders.jsx  JointStateViewer.jsx  Poses.jsx  Program.jsx  RobotState.jsx  Settings.jsx  UrdfViewer.jsx  Viewer3D.jsx  visor3d.jsx
asgard/src/ros/: useRosApi.js
docker/: Docker_Instructions.md  Dockerfile  start.sh  supervisord.conf  xfce4-desktop.xml
log/: latest_mixin
thor_ws/install/: local_setup.sh  setup.sh
thor_ws/install/urdf_visualizer/share/urdf_visualizer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
thor_ws/log/: latest_build
thor_ws/src/urdf_visualizer/: package.xml  setup.cfg  setup.py
ws_thor/: THOR_armthor_arm_baseart6_5000_1.000000_1.000000.ikcache
ws_thor/install/: local_setup.sh  setup.sh
ws_thor/install/moveit_thor/share/ament_index/resource_index/package_run_dependencies/: moveit_thor
ws_thor/install/moveit_thor/share/ament_index/resource_index/parent_prefix_path/: moveit_thor
ws_thor/install/moveit_thor/share/moveit_thor/: .setup_assistant  local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_thor/install/moveit_thor/share/moveit_thor/cmake/: moveit_thorConfig.cmake
ws_thor/install/moveit_thor/share/moveit_thor/config/: THOR_arm.ros2_control.xacro  THOR_arm.srdf  initial_positions.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
ws_thor/install/moveit_thor/share/moveit_thor/launch/: move_group.launch.py  warehouse_db.launch.py
ws_thor/install/urdf_thor/share/urdf_thor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_thor/install/urdf_thor/share/urdf_thor/urdf/: thor.urdf
ws_thor/log/: latest_build
ws_thor/src/moveit_thor/: .setup_assistant  CMakeLists.txt  package.xml
ws_thor/src/moveit_thor/config/: THOR_arm.ros2_control.xacro  THOR_arm.srdf  THOR_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
ws_thor/src/moveit_thor/launch/: demo.launch.py  fullDemo.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
ws_thor/src/thor_bringup/: CMakeLists.txt  package.xml
ws_thor/src/thor_bringup/launch/: joy_real.launch.py  joy_sim.launch.py  real_robot.launch.py  rosbridge.launch.py  simulated_robot.launch.py
ws_thor/src/thor_controller/: CMakeLists.txt  package.xml  thor_controller.xml
ws_thor/src/thor_controller/config/: thor_controllers.yaml
ws_thor/src/thor_controller/include/thor_controller/: thor_interface.hpp
ws_thor/src/thor_controller/launch/: controller.launch.py
ws_thor/src/thor_controller/src/: thor_interface.cpp
ws_thor/src/thor_joystick/: CMakeLists.txt  package.xml
ws_thor/src/thor_joystick/include/thor_joystick/: joystick_moveit_controller.hpp
ws_thor/src/thor_joystick/launch/: joy_joint.launch.py  joy_pose.launch.py  joystick_control.launch.py
ws_thor/src/thor_joystick/src/: joystick_joint_controller.cpp  joystick_moveit_controller.cpp  joystick_pose_controller.cpp
ws_thor/src/thor_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ws_thor/src/thor_moveit/config/: THOR_arm.ros2_control.xacro  THOR_arm.srdf  THOR_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  thor_arm.ros2_control.xacro  thor_arm.srdf  thor_arm.urdf.xacro
ws_thor/src/thor_moveit/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ws_thor/src/thor_msgs/: CMakeLists.txt  package.xml
ws_thor/src/thor_msgs/msg/: CartesianGoal.msg  IKGoal.msg
ws_thor/src/thor_server/: CMakeLists.txt  package.xml
ws_thor/src/thor_server/action/: JointTask.action  PoseTask.action
ws_thor/src/thor_server/src/: hardware_command_node.cpp  task_server.cpp
ws_thor/src/thor_status_publisher/: package.xml  setup.cfg  setup.py
ws_thor/src/thor_status_publisher/thor_status_publisher/: cartesian_goal_listener.py  ik_goal_listener.py  joint_goal_listener.py  random_position_commander.py  robot_status_publisher.py
ws_thor/src/thor_tests/src/: joy_test.cpp  simple_moveit_interface.cpp  test_joy.cpp
ws_thor/src/thor_urdf/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ws_thor/src/thor_urdf/launch/: display.launch.py  gazebo.launch.py  launch.py
ws_thor/src/thor_urdf/meshes/: Art4.dae  GripperArm.dae  GripperArmGear.dae  GripperBase.dae  GripperFinger.dae
ws_thor/src/thor_urdf/urdf/: thor.urdf.xacro  thor_arm.ros2_control.xacro  thor_gazebo.xacro
ws_thor/src/urdf_thor/: CMakeLists.txt  setup.cfg  setup.py
ws_thor/src/urdf_thor/launch/: display.launch.py  gazebo.launch.py  launch.py
ws_thor/src/urdf_thor/meshes/: Art3.dae  Art5.dae  Art6.dae
ws_thor/src/urdf_thor/rviz/: display.rviz
ws_thor/src/urdf_thor/urdf/: thor.urdf  thor.urdf.xacro
